made one more block

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -76,12 +77,72 @@
 
     <div class="pictures_container">
         <div class="pictures">
-            <img src="Images/firstPicture.png" alt="">
-            <img src="Images/secondPicture.png" alt="">
-            <img src="Images/thirdPicture.png" alt="">
-            <img src="Images/fourthPicture.png" alt="">
+
+            <div class="picture-info_container">
+                <img src="Images/firstPicture.png" alt="">
+                <div class="pictures-info">
+                    <h1 class="pictures-info_text">Birthday</h1>
+                    <ul>
+                        <li>
+                            <a href="#" class="see-more_link">See More ›</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="picture-info_container">
+                <img src="Images/secondPicture.png" alt="">
+                <div class="pictures-info">
+                    <h1 class="pictures-info_text">Anniversary</h1>
+                    <ul>
+                        <li>
+                            <a href="#" class="see-more_link">See More ›</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="picture-info_container">
+                <img src="Images/thirdPicture.png" alt="">
+                <div class="pictures-info">
+                    <h1 class="pictures-info_text">Valentine's Day</h1>
+                    <ul>
+                        <li>
+                            <a href="#" class="see-more_link">See More ›</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="picture-info_container">
+                <img src="Images/fourthPicture.png" alt="">
+                <div class="pictures-info">
+                    <h1 class="pictures-info_text">Christmas</h1>
+                    <ul>
+                        <li>
+                            <a href="#" class="see-more_link">See More ›</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
     </div>
+
+    <div class="get-us_container">
+        <div class="get-us">
+            <div class="get-us-title_block">
+                <h1 class="get-us_title">Ready to get started?</h1>
+                <h1 class="get-us_text">Sign up or contact us</h1>
+            </div>
+
+            <div class="get-us_btns">
+                <button class="get-us-find-gift_btn">FIND GIFT NOW</button>
+                <button class="get-us-how-works_btn">how it works</button>
+            </div>
+        </div>
+    </div>
+
 </section>
 
 </body>
