made one more container

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 <section class="section-header">
-    <div class="header">
+    <header class="header">
         <div class="header-content">
 
             <div class="header-content_box">
@@ -34,7 +34,7 @@
 
             </div>
         </div>
-    </div>
+    </header>
 </section>
 
 <section class="section-body">
@@ -138,10 +138,73 @@
 
             <div class="get-us_btns">
                 <button class="get-us-find-gift_btn">FIND GIFT NOW</button>
-                <button class="get-us-how-works_btn">how it works</button>
+                <button class="get-us-how-works_btn">HOW IT WORKS</button>
             </div>
         </div>
     </div>
+
+    <div class="best-blogs_container">
+        <div class="best-blog_title">
+            <h1 class="best-blog-ever_title">Our Best Blogs Ever</h1>
+            <h1 class="try-our-blog_title">“Try our blog to find the best tips and tricks to select your gift”</h1>
+        </div>
+
+        <div class="wish_container">
+            <div class="wish_photo">
+                <img src="Images/wishPhoto.png" alt="">
+            </div>
+
+            <div class="wish_block">
+                <h1 class="name">Mr. John Doe</h1>
+
+                <div class="wish-title_block">
+                    <h1 class="wish_title">The best way to wish your wife</h1>
+                </div>
+
+                <div class="wish-read-more">
+                    <ul>
+                        <li>
+                            <a class="read-more_link" href="#">Read More</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="wish-info_container">
+            <div class="database-wishes">
+                <div class="database-wishes_block">
+                    <h1 class="database-wishes_title">Database to find the gifts for your girlfriend</h1>
+                    <h1 class="database-wishes_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</h1>
+                    <div class="database-wishes_link">
+                        <ul>
+                            <li>
+                                <a class="database-wishes_read-more" href="#">Read More</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="interesting-info-wishes">
+                <div class="interesting-info-wishes_block">
+                    <h1 class="interesting-info-wishes_title">How Artificial Intelligence read your mind to find the best gift</h1>
+                    <h1 class="interesting-info-wishes_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</h1>
+                    <div class="interesting-info-wishes_link">
+                        <ul>
+                            <li>
+                                <a class="interesting-info-wishes_read-more" href="#">Read More</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
 
 </section>
 
