--- a/index.html
+++ b/index.html
@@ -14,28 +14,26 @@
 </head>
 
 <body>
-<section class="section-header">
-    <header class="header">
-        <div class="header-content">
 
-            <div class="header-content_box">
-                <h1 class="header-logo">logo</h1>
+<header class="header">
+    <div class="header-content">
+        <div class="header-content_box">
+            <h1 class="header-logo">logo</h1>
 
-                <div class="header-links">
-                    <ul>
-                        <li><a class="link" href="#">Home</a></li>
-                        <li><a class="link class" href="#">About Us</a></li>
-                        <li><a class="link class" href="#">Services</a></li>
-                        <li><a class="link class" href="#">Blogs</a></li>
-                    </ul>
-                </div>
-
-                <button class="gift-finder_btn">Gift Finder</button>
-
+            <div class="header-links">
+                <ul>
+                    <li><a class="link" href="#">Home</a></li>
+                    <li><a class="link class" href="#">About Us</a></li>
+                    <li><a class="link class" href="#">Services</a></li>
+                    <li><a class="link class" href="#">Blogs</a></li>
+                </ul>
             </div>
+
+            <button class="gift-finder_btn">Gift Finder</button>
+
         </div>
-    </header>
-</section>
+    </div>
+</header>
 
 <section class="section-body">
     <div class="find-gift_container">
@@ -203,10 +201,47 @@
             </div>
         </div>
     </div>
-
-    
-
 </section>
 
+<footer class="footer">
+    <div class="footer_container">
+        <div class="footer_links">
+            <div class="left-side_links">
+                <ul>
+                    <li>
+                        <a class="footer-home_link" href="#">Home</a>
+                        <a class="footer-about_link" href="#">About</a>
+                    </li>
+                </ul>
+            </div>
+
+            <h1 class="footer_logo">logo</h1>
+
+            <div class="right-side_links">
+                <ul>
+                    <li>
+                        <a class="footer-service_link" href="#">Service</a>
+                        <a class="footer-blog_link" href="#">Blog</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="networks_block">
+            <img class="facebook_logo" src="Images/facebook.png" alt="">
+            <img class="twitter_logo" src="Images/twitter.png" alt="">
+            <img class="instagram_logo" src="Images/instagram.png" alt="">
+            <img class="youtube_logo" src="Images/youtube.png" alt="">
+            <img class="pinterest_logo" src="Images/pinterest.png" alt="">
+        </div>
+
+        <div class="privacy_block">
+            <h1 class="privacy_title">© 2010 — 2020  Privacy — Terms</h1>
+        </div>
+
+    </div>
+</footer>
 </body>
 </html>
