fixed some elements

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </ul>
             </div>
 
-            <button class="gift-finder_btn">Gift Finder</button>
+            <button class="gift-finder_btn">GIFT FINDER</button>
 
         </div>
     </div>
@@ -44,16 +44,16 @@
                 <h1 class="find-gift_text">Struggling to find a gift for your wife or girlfriend? No problem!</h1>
                 <button class="find-gift_btn ">FIND GIFT NOW</button>
             </div>
-
         </div>
+
         <div class="find-gift_photo">
-            <img src="Images/findGiftPhoto.png" alt="">
+            <img class="find-gift-photo_img" src="Images/findGiftPhoto.png" alt="">
         </div>
     </div>
 
     <div class="learn-more-gift_container">
         <div class="learn-more_photo">
-            <img src="Images/learnMorePhoto.png" alt="">
+            <img class="learn-more-photo_img" src="Images/learnMorePhoto.png" alt="">
         </div>
 
         <div class="learn-more_block">
@@ -75,9 +75,12 @@
 
     <div class="pictures_container">
         <div class="pictures">
-
             <div class="picture-info_container">
-                <img src="Images/firstPicture.png" alt="">
+
+                <div class="picture-container">
+                    <img src="Images/firstPicture.png" alt="">
+                </div>
+
                 <div class="pictures-info">
                     <h1 class="pictures-info_text">Birthday</h1>
                     <ul>
@@ -89,7 +92,11 @@
             </div>
 
             <div class="picture-info_container">
-                <img src="Images/secondPicture.png" alt="">
+
+                <div class="picture-container">
+                    <img src="Images/secondPicture.png" alt="">
+                </div>
+
                 <div class="pictures-info">
                     <h1 class="pictures-info_text">Anniversary</h1>
                     <ul>
@@ -101,7 +108,11 @@
             </div>
 
             <div class="picture-info_container">
-                <img src="Images/thirdPicture.png" alt="">
+
+                <div class="picture-container">
+                    <img src="Images/thirdPicture.png" alt="">
+                </div>
+
                 <div class="pictures-info">
                     <h1 class="pictures-info_text">Valentine's Day</h1>
                     <ul>
@@ -113,7 +124,11 @@
             </div>
 
             <div class="picture-info_container">
-                <img src="Images/fourthPicture.png" alt="">
+
+                <div class="picture-container">
+                    <img src="Images/fourthPicture.png" alt="">
+                </div>
+
                 <div class="pictures-info">
                     <h1 class="pictures-info_text">Christmas</h1>
                     <ul>
@@ -230,11 +245,21 @@
         <hr>
 
         <div class="networks_block">
-            <img class="facebook_logo" src="Images/facebook.png" alt="">
-            <img class="twitter_logo" src="Images/twitter.png" alt="">
-            <img class="instagram_logo" src="Images/instagram.png" alt="">
-            <img class="youtube_logo" src="Images/youtube.png" alt="">
-            <img class="pinterest_logo" src="Images/pinterest.png" alt="">
+            <a href="#">
+                <img class="facebook_logo" src="Images/facebook.png" alt="">
+            </a>
+            <a href="#">
+                <img class="twitter_logo" src="Images/twitter.png" alt="">
+            </a>
+            <a href="#">
+                <img class="instagram_logo" src="Images/instagram.png" alt="">
+            </a>
+            <a href="#">
+                <img class="youtube_logo" src="Images/youtube.png" alt="">
+            </a>
+            <a href="">
+                <img class="pinterest_logo" src="Images/pinterest.png" alt="">
+            </a>
         </div>
 
         <div class="privacy_block">
