--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
 
 <header class="header">
     <div class="header-content">
+
+        <div class="burger-menu" onclick="burger(this)">
+            <div class="burger-menu-list">
+                <div class="burger-container">
+                    <ul class="burger-list">
+                        <li><a class="list-item" href="#">Home</a></li>
+                        <li><a class="list-item" href="#">About Us</a></li>
+                        <li><a class="list-item" href="#">Services</a></li>
+                        <li><a class="list-item" href="#">Blogs</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+
         <div class="header-content_box">
             <h1 class="header-logo">logo</h1>
 
@@ -268,5 +285,7 @@
 
     </div>
 </footer>
+
+<script src="javascript.js"></script>
 </body>
 </html>
